# nicegui-spa

./: README.md  main.py  pyproject.toml  theme.py
components/admin/: __init__.py  user_editor.py  user_table.py
components/common/: __init__.py  chat_box.py  confirm.py  editable_table.py  header_notification.py  sidebar.py
components/item/: __init__.py  description_textarea.py  item_editor.py  item_table.py  title_input.py
components/user/: __init__.py  email_input.py  forgot_password.py  my_profile.py  name_input.py  password_input.py  update_password.py  username_input.py
css/: __init__.py  chat_box.py  editor.py  notify.py  sidebar.py
models/: item.py  user.py
pages/: __init__.py  admin.py  dashboard.py  item.py  login.py  user_settings.py
routes/: __init__.py  _custom_sub_page.py  admin.py  dashboard.py  item.py  user.py
