[project]
name = "nicegui-spa"
version = "0.1.0"
description = "Web SPA template. Replicating full-stack-fastapi-template using NiceGUI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nicegui>=2.22.2",
    "pydantic[email]>=2.11.7",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "components/user/__init__.py",
]

lint.select = ["E", "F", "B", "W", "I", "N", "UP", "S", "BLE", "C4", "DTZ", "T10", "EM", "ISC", "ICN"]
lint.ignore = ["N815", "BLE001", "B008"]
lint.fixable = ["ALL"]
lint.unfixable = []
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

format.quote-style = "single"
format.indent-style = "space"
format.skip-magic-trailing-comma = false
format.line-ending = "auto"
